// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs component testing Tabs 1`] = `
<DocumentFragment>
  <div
    class="sc-hKDTPf hvFLrB"
  >
    <div
      class="sc-jMpmlX cmKmvz"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-fmZSGO"
    >
      <button
        class="sc-gwsNht kzsszl"
        tabindex="0"
        value="hoge"
      >
        <div
          alignitems="center"
          class="sc-hBDmJg ijFGxQ"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-bXdtCk cECRTw sc-dYOLZc fWiLZV"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            hoge 
          </p>
        </div>
      </button>
      <button
        class="sc-gwsNht cvTHgZ"
        tabindex="-1"
        value="fuga"
      >
        <div
          alignitems="center"
          class="sc-hBDmJg ijFGxQ"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-bXdtCk cECRTw sc-dYOLZc iSrpMx"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            fuga 
          </p>
        </div>
      </button>
      <div
        class="sc-hoLldG gHWXwY"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Tabs component testing Tabs with badge 1`] = `
<DocumentFragment>
  <div
    class="sc-hKDTPf hvFLrB"
  >
    <div
      class="sc-jMpmlX cmKmvz"
      style="left: 0px; width: 0px;"
    />
    <div
      class="sc-fmZSGO"
    >
      <button
        class="sc-gwsNht kzsszl"
        tabindex="0"
        value="hoge"
      >
        <div
          alignitems="center"
          class="sc-hBDmJg erwxRe"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-bXdtCk cECRTw sc-dYOLZc fWiLZV"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            hoge 
          </p>
          <span
            backgroundcolor="#0B82F4"
            class="sc-jZhnRx fxgygF"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            1
          </span>
        </div>
      </button>
      <button
        class="sc-gwsNht cvTHgZ"
        tabindex="-1"
        value="fuga"
      >
        <div
          alignitems="center"
          class="sc-hBDmJg erwxRe"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-bXdtCk cECRTw sc-dYOLZc iSrpMx"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            fuga 
          </p>
          <span
            backgroundcolor="#778490"
            class="sc-jZhnRx cWLpEW"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            2
          </span>
        </div>
      </button>
      <button
        class="sc-gwsNht cvTHgZ"
        tabindex="-1"
        value="piyo"
      >
        <div
          alignitems="center"
          class="sc-hBDmJg erwxRe"
          display="flex"
          justifycontent="space-between"
        >
          <p
            align="left"
            class="sc-bXdtCk cECRTw sc-dYOLZc iSrpMx"
            color="#041C33"
            font-size="14px"
            lineheight="1.4"
            weight="normal"
          >
            piyo 
          </p>
          <span
            backgroundcolor="#778490"
            class="sc-jZhnRx cWLpEW"
            color="#FFFFFF"
            font-size="13px"
            font-weight="bold"
            type="pill"
          >
            3
          </span>
        </div>
      </button>
      <div
        class="sc-hoLldG gHWXwY"
      />
    </div>
  </div>
</DocumentFragment>
`;
